# lazyjira

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  deny.toml  package-lock.json  package.json
.github/workflows/: ci.yml  dependencies.yml  pr.yml  release.yml
.husky/: pre-commit
src/: data_manager.rs  jira.rs  lib.rs  main.rs  models.rs  navigation.rs  test_description_parsing.rs  tui.rs  ui.rs
src/api/: adf.rs  client.rs  config.rs  endpoints.rs  error.rs  mod.rs  types.rs
src/app/: actions.rs  keybinds.rs  messages.rs  mod.rs  navigator.rs  state.rs  update.rs
src/commands/: mod.rs  navigation.rs  transition.rs  ui.rs
src/context/: app_context.rs
src/core/: event.rs  terminal.rs
src/services/: adf.rs  client.rs  config.rs  endpoints.rs  error.rs  mod.rs  sort.rs  types.rs
src/ui/: draw.rs  mod.rs
src/ui/components/: footer.rs  help_popup.rs  help_view.rs  issue_detail.rs  issue_item.rs  issue_list.rs  mod.rs  modal.rs  transition_selector.rs
src/ui/components/issue_detail/: mod.rs  tests.rs
src/ui/components/issue_list/: icons.rs  mod.rs  navigation.rs  spinner.rs  tabs.rs
tests/: app_refresh_test.rs  client_tests.rs  help_popup_tests.rs  integration_test.rs  mock_api.rs  models_test.rs  navigation_test.rs  navigator_tests.rs  state_tests.rs  test_utils.rs  types_tests.rs  ui_component_tests.rs  ui_test.rs
