[package]
name = "lazyjira"
version = "0.1.0"
edition = "2021"
description = "A TUI application for interacting with Jira"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "lazyjira"
path = "src/main.rs"

[dependencies]
log = "0.4.29"
env_logger = "0.10"
ratatui = "0.30.0"
color-eyre = "0.6.3"
crossterm = "0.29.0"
dotenv="0.15.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
base64 = "0.22"
urlencoding = "2.1"
tokio-util = "0.7"
